@@ -12,6 +12,7 @@
 	* Vertint: support for GME data [request: Luis Kornblueh]
 	* Vertint: bug fix for input with time constant fields
 	* Outputgmt: use grid_mask if present
+	* Input: skip ',' from standard input stream
 	* splitsel: bug fix for multilevel/multivar datasets [report: Heiner Widmann]
 	* remaplib: set luse_grid_corners = TRUE for GRID_CELL (bug fix)
 	* remap_conserv: skip very small regions if num_subseg exceeded limit
